# example-fastapi-server

./: .gitignore  pyproject.toml
authlib/integrations/fastapi_oauth2/: __init__.py  authorization_server.py  errors.py  requests.py  resource_protector.py  signals.py
authlib/integrations/flask_oauth2/: authorization_server.py  requests.py  resource_protector.py
authlib/integrations/sqla_oauth2/: functions.py
authlib/oauth2/rfc6749/: __init__.py  async_requests.py
src/: database.py  main.py
tests/: conftest.py  test_home.py
website/: app.py  main.py  models.py  oauth2.py  routes.py  sessions.py  settings.py
