[project]
name = "oauth-fastapi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "TyVik",email = "tyvik8@gmail.com"},
]
dependencies = ["sqlalchemy>=2.0.41", "fastapi>=0.116.1", "uvicorn>=0.35.0", "starsessions>=2.2.1", "pydantic-settings>=2.10.1", "psycopg>=3.2.9", "werkzeug>=3.1.3", "blinker>=1.9.0", "jinja2>=3.1.6", "python-multipart>=0.0.20"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pytest-asyncio>=1.1.0",
]
